toggle dark mode fixed. div received as a child. so child numbers rebuilded in _section

--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -29,23 +29,23 @@ section {
 
     }
 
-    &:first-of-type {
-        background-image: url("img/Image1.jpg");
-        height: 100vh;
-    }
+//     &:first-of-type {
+//         background-image: url("img/Image1.jpg");
+//         height: 100vh;
+//     }
 
-    &:nth-child(3) {
+    &:nth-child(4) {
         background-image: url("img/Image2.jpg");
     }
 
-    &:nth-child(5) {
+    &:nth-child(6) {
         background-image: url("img/Image3.jpg");
     }
 
-    &:nth-child(7) {
-        background-image: url("img/Image1.jpg");
-        height: 100vh;
-    }
+//     &:nth-child(6) {
+//         background-image: url("img/Image1.jpg");
+//         height: 100vh;
+//     }
 }
 
 .section-dark {
