--- a/style.css
+++ b/style.css
@@ -368,19 +368,11 @@ section:nth-of-type(odd) p {
   font-size: 1.5rem;
   text-transform: uppercase;
 }
-section:first-of-type {
-  background-image: url("img/Image1.jpg");
-  height: 100vh;
-}
-section:nth-child(3) {
+section:nth-child(4) {
   background-image: url("img/Image2.jpg");
 }
-section:nth-child(5) {
+section:nth-child(6) {
   background-image: url("img/Image3.jpg");
-}
-section:nth-child(7) {
-  background-image: url("img/Image1.jpg");
-  height: 100vh;
 }
 
 .section-dark {
